--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
             <!-- Responsive Navbar Part 2: Place all navbar contents you want collapsed withing .navbar-collapse.collapse. -->
             <div class="nav-collapse collapse">
               <ul class="nav">
-                <li class="active"><a href="#">Home</a></li>
+                <li class="active"><a href="#home">Home</a></li>
                 <li><a href="#features">Features</a></li>
                 <li><a href="#usecase">Use-cases</a></li>
                 <li><a href="#roadmap">Roadmap</a></li>
@@ -84,7 +84,7 @@
           <div class="container">
             <div class="carousel-caption">
               <h1>Simply Threats.</h1>
-              <p class="lead">The primary goal of MISP is to be used, this is why simplicity is the driving force behind the project. Storing and especially using information about threats and malware should not be difficult. MISP is there to help you get the maximum out of your data without unmanageable complexity.</p>
+              <p class="lead">The primary goal of MISP is to be used. This is why <b>simplicity is the driving force</b> behind the project. <b>Storing and especially using information</b> about threats and malware should not be difficult. MISP is there to help you <b>get the maximum out of your data without unmanageable complexity</b>.</p>
               <a class="btn btn-large btn-primary" href="#features">Learn more &raquo;</a>
             </div>
           </div>
@@ -95,8 +95,8 @@
             <div class="carousel-caption">
               <h1>The key is Automation.</h1>
               <p class="lead">
-                Isn't it sad to have a lot of data and not use it because it's too much work? Thanks to MISP you can store your IOCs in a structured manner, and thus enjoy the automated exports for IDS, or SIEM, in STIX or OpenIOC and even to other MISPs. <br/>
-                You can now leverage the value of the data you possess without effort and in an automated manner.
+                Isn't it sad to have a lot of data and not use it because it's too much work? Thanks to MISP you can <b>store your IOCs</b> in a structured manner, and thus enjoy the <b>correlation</b>, <b>automated exports</b> for IDS, or SIEM, in STIX or OpenIOC and even to other MISPs.
+                You can now <b>leverage the value of your data</b> without effort and in an automated manner.
               </p>
               <a class="btn btn-large btn-primary" href="#usecase">Read more &raquo;</a>
             </div>
@@ -108,9 +108,9 @@
             <div class="carousel-caption">
               <h1>By giving you will receive.</h1>
               <p class="lead">
-                Sharing is key to fast and effective detection of attacks. Quite often similar organisations are targeted by the same Threat Actor, in the same or different Campaign.
-                MISP will make it easier for you to share with, but also to receive from trusted partners and trust-groups. <br/>
-                Sharing also enabled collaborative analysis and prevents you from doing the work someone else already did before.
+                Sharing is key to <b>fast and effective detection of attacks</b>. Quite often similar organisations are targeted by the same Threat Actor, in the same or different Campaign.
+                MISP will make it easier for you to <b>share with</b>, but also to <b>receive from trusted partners and trust-groups</b>. <br/>
+                Sharing also enabled <b>collaborative analysis</b> and prevents you from doing the work someone else already did before.
               </p>
               <a class="btn btn-large btn-primary disabled" href="#">Public OSINT instance coming soon</a>
             </div>
@@ -138,7 +138,7 @@
            <div class="well">
              <img class="img-circle" src="img/question.jpg">
              <h2>Requesting feedback</h2>
-             <p>Together with the <b>Open Information Security Foundation</b> we are launching a questionnaire to get a <b>better view on the user base</b> and on <b>possible support</b> MISP could benefit to coordinate efforts and guarantee MISP governance on long term.</p>
+             <p>Together with the <a href="http://openinfosecfoundation.org">Open Information Security Foundation</a> we are launching a questionnaire to get a <b>better view on the user base</b> and on <b>possible support</b> MISP could benefit to coordinate efforts and guarantee MISP governance on long term.</p>
              <p><a class="btn btn-primary" href="#">Give feedback now &raquo;</a></p>
            </div>
         </div><!-- /.span4 -->
@@ -146,7 +146,7 @@
            <div class="well">
              <img class="img-circle" src="img/usecase.png">
              <h2>Use-cases</h2>
-             <p>Discover how MISP is <b>used today</b> in multiple organisations. Not only to store, share, collaborate on malware, but 
+             <p>Discover how MISP is <b>used today</b> in multiple organisations. Not only to store, share, collaborate on malware, but also to use the IOCs to <b>detect and prevent attacks</b>. 
              <p><a class="btn btn-primary" href="#usecase">View details &raquo;</a></p>
            </div>
         </div><!-- /.span4 -->
@@ -192,12 +192,12 @@
       <hr class="featurette-divider">
 
 
-      <div class="featurette-background" style="background-image: url('img/users-bg.jpg');" alt="Laura Billings - CC by NC">
+      <div class="featurette-background" style="background-image: url('img/users-bg.jpg');" alt="Duncan Hull - CC - changed color">
       <div class="container featurette" id="users">
         <img class="featurette-image pull-left" src="img/transparent-icon.png">
-        <div class="featurette-text">
+        <div class="featurette-text" style="color: white;">
         <h2 class="featurette-heading">Today MISP is used by</h2>
-        <h3>CERTs and Governments</h3>
+        <h3 >CERTs and Governments</h3>
         <h3>ISACs and Trust-groups</h3>
         <h3>Private Companies</h3>
         </div>
@@ -242,16 +242,16 @@
         <h2 class="featurette-heading">Planned roadmap</span></h2>
         <h3>v2.4</h3>
         <ul class="lead">
-        <li>Sharing groups / Releasable to model</li>
+        <li>Sharing groups or 'Releasable to' model</li>
         <li>Modular import / export with plugins</li>
         </ul>
         <h3>v3.0+</h3>
         <ul class="lead">
         <li>New data model allowing composite objects (ex: file described by hashes, filenames, ...)</li>
-        <li>Import STIX data and better support for OpenIOC</li>
-        <li>Support Cyber Threat Intelligence structues such as Campaigns, Threat Actors, TTPs,...</li>
+        <li>Import of STIX data and better support for OpenIOC</li>
+        <li>Support Cyber Threat Intelligence structures such as Campaigns, Threat Actors, TTPs,...</li>
         <li>Further integration with other tools: Import/Export from/to sandboxes, external feeds, ...</li>
-        <li>Automatic enrichment by gathering additional information on the data you're entering.</li>
+        <li>Enrichment by gathering additional information on the data you're entering.</li>
         </ul>
         <a class="btn btn-large btn-primary" href="#contact">Support the development &raquo;</a>
         </div>
@@ -305,7 +305,7 @@
       <hr class="featurette-divider">
 
 
-      <div class="featurette-background" style="background-image: url('img/support-bg.jpg');" alt="Tim Geers - CC by SA ">
+      <div class="featurette-background" style="background-image: url('img/support-bg.jpg');" alt="alcomm - CC BY NC ">
       <div class="container featurette" id="support">
         <img class="featurette-image pull-right" src="img/transparent-icon.png">
         <div class="featurette-text">
@@ -332,7 +332,7 @@
         <img class="featurette-image pull-left" src="img/transparent-icon.png">
         <div class="featurette-text">
         <h2 class="featurette-heading">Contact us.</h2>
-        <p class="lead">Together with the <b>Open Information Security Foundation</b> we are launching a questionnaire to get a <b>better view on the user base</b> and on <b>possible support</b> MISP could benefit to coordinate efforts and guarantee MISP governance on long term.</p>
+        <p class="lead">Together with the <a href="http://openinfosecfoundation.org" target="_blank">Open Information Security Foundation</a> we are launching a questionnaire to get a <b>better view on the user base</b> and on <b>possible support</b> MISP could benefit to coordinate efforts and guarantee MISP governance on long term.</p>
              <p><a class="btn btn-large btn-primary" href="#">Give feedback now &raquo;</a></p>
         <p class="lead">&nbsp;</p>
         <p class="lead">Do you have a more specific question or remark? </p>
