slower carousel and added indicators

--- a/index.html
+++ b/index.html
@@ -78,6 +78,12 @@
     <!-- Carousel
     ================================================== -->
     <div id="myCarousel" class="carousel slide">
+      <ol class="carousel-indicators">
+        <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
+        <li data-target="#myCarousel" data-slide-to="1"></li>
+        <li data-target="#myCarousel" data-slide-to="2"></li>
+      </ol>
+
       <div class="carousel-inner">
         <div class="item active">
           <img src="img/malware-bg.jpg" alt="">
@@ -378,7 +384,9 @@
       !function ($) {
         $(function(){
           // carousel demo
-          $('#myCarousel').carousel()
+          $('#myCarousel').carousel({
+              interval: 7000
+            })
         })
       }(window.jQuery);
 
