--- a/index.html
+++ b/index.html
@@ -17,37 +17,34 @@
       <link rel="stylesheet" href="assets/css/font-awesome-ie7.min.css">
       <![endif]-->
       <link href="assets/css/bootplus.css" rel="stylesheet">
-      <style type="text/css">
-      body {
-        padding-top: 46px;
-        padding-bottom: 40px;
-      }
-       .hero-unit {
-          background: #00001C url(assets/img/cover4.jpg) no-repeat top left;
-       }
-       .hero-unit h1 {color: #FFF}
-       .hero-unit p {color: #F5F5F5}
-      </style>
       <link href="assets/css/bootplus-responsive.css" rel="stylesheet">
       <!--link rel="stylesheet" href="css/blueimp-gallery.min.css">
       <link rel="stylesheet" href="css/bootstrap-image-gallery.min.css"-->
       <link rel="stylesheet" href="css/jquery.fancybox.css" type="text/css" media="screen" />
-      <!--link href="local.css" rel="stylesheet"-->
+      <link href="local.css" rel="stylesheet">
 
     <!-- HTML5 shim, for IE6-8 support of HTML5 elements -->
     <!--[if lt IE 9]>
       <script src="assets/js/html5shiv.js"></script>
     <![endif]-->
 
-      <!-- Fav and touch icons -->
-      <link rel="apple-touch-icon-precomposed" sizes="144x144" href="assets/ico/favicon-144.png">
-      <link rel="apple-touch-icon-precomposed" sizes="114x114" href="assets/ico/favicon-114.png">
-      <link rel="apple-touch-icon-precomposed" sizes="72x72" href="assets/ico/favicon-72.png">
-                    <link rel="apple-touch-icon-precomposed" href="assets/ico/favicon-57.png">
-                                   <link rel="shortcut icon" href="assets/ico/favicon.png">
+    <!-- Fav and touch icons -->
+    <link rel="apple-touch-icon-precomposed" sizes="144x144" href="assets/ico/favicon-144.png">
+    <link rel="apple-touch-icon-precomposed" sizes="114x114" href="assets/ico/favicon-114.png">
+    <link rel="apple-touch-icon-precomposed" sizes="72x72" href="assets/ico/favicon-72.png">
+                  <link rel="apple-touch-icon-precomposed" href="assets/ico/favicon-57.png">
+                                 <link rel="shortcut icon" href="assets/ico/favicon.png">
   </head>
 
   <body>
+
+
+
+    <!-- NAVBAR
+    ================================================== -->
+    <div class="navbar-wrapper">
+      <!-- Wrap the .navbar in .container to center it within the absolutely positioned parent. -->
+      <div class="container">
 
       <div class="navbar navbar-fixed-top">
          <div class="navbar-inner">
@@ -57,43 +54,84 @@
                <span class="icon-bar"></span>
                <span class="icon-bar"></span>
              </button>
-             <a class="brand" href="#">Project name</a>
+             <div class="text-center logo">
+              <span class="logoletter">M</span>alware 
+              <span class="logoletter">I</span>nformation 
+              <span class="logoletter">S</span>haring 
+              <span class="logoletter">P</span>latform
+             </div>
              <div class="nav-collapse collapse">
-               <ul class="nav">
-                 <li class="active"><a href="#">Home</a></li>
-                 <li><a href="#about">About</a></li>
-                 <li><a href="#contact">Contact</a></li>
-                 <li class="dropdown">
-                   <a href="#" class="dropdown-toggle" data-toggle="dropdown">Dropdown <b class="caret"></b></a>
-                   <ul class="dropdown-menu">
-                     <li><a href="#">Action</a></li>
-                     <li><a href="#">Another action</a></li>
-                     <li><a href="#">Something else here</a></li>
-                     <li class="divider"></li>
-                     <li class="nav-header">Nav header</li>
-                     <li><a href="#">Separated link</a></li>
-                     <li><a href="#">One more separated link</a></li>
-                   </ul>
-                 </li>
-               </ul>
-               <form class="navbar-form pull-right">
-                 <input class="span2" type="text" placeholder="Email">
-                 <input class="span2" type="password" placeholder="Password">
-                 <button type="submit" class="btn btn-primary">Sign in</button>
-               </form>
-             </div><!--/.nav-collapse -->
-           </div>
-         </div>
-       </div>
+              <ul class="nav">
+                <li class="active"><a href="#home">Home</a></li>
+                <li><a href="#features">Features</a></li>
+                <li><a href="#usecase">Use-cases</a></li>
+                <li><a href="#roadmap">Roadmap</a></li>
+                <li><a href="#screenshots">Screenshots</a></li>
+                <li><a target="_blank" href="http://github.com/MISP/MISP">Download</a></li>
+                <!--li><a href="#public">Public MISP</a></li-->
+                <li><a href="#support">Support</a></li>
+                <li><a href="#contact">Contact</a></li>
+              </ul>
+            </div><!--/.nav-collapse -->
+          </div><!-- /.navbar-inner -->
+        </div><!-- /.navbar -->
 
-      <!-- Main hero unit for a primary marketing message or call to action -->
-      <div class="hero-unit">
-         <div class="container">
-            <h1>Hello, world!</h1>
-            <p>This is a template for a simple marketing or informational website. It includes a large callout called the hero unit and three supporting pieces of content. Use it as a starting point to create something more unique.</p>
-            <p><a href="#" class="btn btn-primary btn-large">Learn more &raquo;</a></p>
-         </div>
+      </div> <!-- /.container -->
+    </div><!-- /.navbar-wrapper -->
+
+
+
+    <!-- Carousel
+    ================================================== -->
+    <div id="myCarousel" class="carousel slide">
+      <ol class="carousel-indicators">
+        <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
+        <li data-target="#myCarousel" data-slide-to="1"></li>
+        <li data-target="#myCarousel" data-slide-to="2"></li>
+      </ol>
+
+      <div class="carousel-inner">
+        <div class="item active">
+          <img src="img/malware-bg.jpg" alt="">
+          <div class="container">
+            <div class="carousel-caption">
+              <h1>Simply Threats.</h1>
+              <p class="lead">The primary goal of MISP is to be used. This is why <b>simplicity is the driving force</b> behind the project. <b>Storing and especially using information</b> about threats and malware should not be difficult. MISP is there to help you <b>get the maximum out of your data without unmanageable complexity</b>.</p>
+              <a class="btn btn-large btn-primary" href="#features">Learn more &raquo;</a>
+            </div>
+          </div>
+        </div>
+        <div class="item">
+          <img src="img/automation-bg.jpg" alt="">
+          <div class="container">
+            <div class="carousel-caption">
+              <h1>The key is Automation.</h1>
+              <p class="lead">
+                Isn't it sad to have a lot of data and not use it because it's too much work? Thanks to MISP you can <b>store your IOCs</b> in a structured manner, and thus enjoy the <b>correlation</b>, <b>automated exports</b> for IDS, or SIEM, in STIX or OpenIOC and even to other MISPs.
+                You can now <b>leverage the value of your data</b> without effort and in an automated manner.
+              </p>
+              <a class="btn btn-large btn-primary" href="#usecase">Read more &raquo;</a>
+            </div>
+          </div>
+        </div>
+        <div class="item">
+          <img src="img/sharing-bg.jpg" alt="">
+          <div class="container">
+            <div class="carousel-caption">
+              <h1>By giving you will receive.</h1>
+              <p class="lead">
+                Sharing is key to <b>fast and effective detection of attacks</b>. Quite often similar organisations are targeted by the same Threat Actor, in the same or different Campaign.
+                MISP will make it easier for you to <b>share with</b>, but also to <b>receive from trusted partners and trust-groups</b>. <br/>
+                Sharing also enabled <b>collaborative analysis</b> and prevents you from doing the work someone else already did before.
+              </p>
+              <a class="btn btn-large btn-primary disabled" href="#">Public OSINT instance coming soon</a>
+            </div>
+          </div>
+        </div>
       </div>
+      <a class="left carousel-control" href="#myCarousel" data-slide="prev">&lsaquo;</a>
+      <a class="right carousel-control" href="#myCarousel" data-slide="next">&rsaquo;</a>
+    </div><!-- /.carousel -->
 
 
       <div class="container">
@@ -105,7 +143,7 @@
             <div class="card">
               <h3 class="card-heading simple">What is MISP?</h3>
               <div class="card-body">
-                <img class="img-circle pull-right" src="img/usecase.png">
+                <img class="img-rounded pull-right" src="img/usecase.png">
                 <p><b>A platform for sharing, storing and correlating Indicators of Compromises of targeted attacks.</b></p>
                 <p>Discover how MISP is <b>used today</b> in multiple organisations. Not only to store, share, collaborate on malware, but also to use the IOCs to <b>detect and prevent attacks</b>.
               </div>
@@ -135,7 +173,7 @@
             <div class="card">
               <h3 class="card-heading simple">Requesting feedback</h3>
               <div class="card-body">
-                <img class="img-circle pull-right" src="img/question.jpg">
+                <img class="img-rounded pull-right" src="img/question.jpg">
                 <p>The MISP project launched a questionnaire to get a <b>better view on the user base</b> and on <b>possible support</b> MISP could benefit to coordinate efforts and guarantee MISP governance on long term.</p>
               </div>
               <div class="card-actions">
@@ -146,7 +184,7 @@
       </div>
 
       <footer>
-        <p>&copy; Company 2013</p>
+        <p>&copy; </p>
       </footer>
 
       </div> <!-- /container -->
