more sections migrated

--- a/index.html
+++ b/index.html
@@ -70,7 +70,6 @@
                 <li><a target="_blank" href="http://github.com/MISP/MISP">Download</a></li>
                 <!--li><a href="#public">Public MISP</a></li-->
                 <li><a href="#support">Support</a></li>
-                <li><a href="#contact">Contact</a></li>
               </ul>
             </div><!--/.nav-collapse -->
           </div><!-- /.navbar-inner -->
@@ -232,6 +231,40 @@
       </div>
 
 
+      <a class="anchor" id="roadmap"></a>
+      <div class="row">
+        <div class="span12">
+        <div class="card">
+        <h3 class="card-heading simple">Roadmap</h3>
+        <div class="card-body">
+          <p>The roadmap of the MISP software project was created in a collaborative effort using the feedback from various users and communities using MISP. It is possible to accelerate the development of new features by <a href="#support">supporting the MISP project</a>. However it is not possible to force new features unilaterally. Things that only benefit your own organisation are free to be developed independently of the official MISP Project.</p>
+        </div>
+        <h3 class="card-heading simple">v2.4</h3>
+        <div class="card-body">
+          <ul>
+          <li>Sharing groups or 'Releasable to' model</li>
+          </ul>
+        </div>
+        <h3 class="card-heading simple">v2.5</h3>
+        <div class="card-body">
+          <ul>
+          <li>Modular import / export with plugins <small><i>(delayed from 2.4)</i></small></li>
+          </ul>
+        </div>
+        <h3 class="card-heading simple">v3.0+</h3>
+        <div class="card-body">
+          <ul>
+          <li>New data model allowing composite objects (ex: file described by hashes, filenames, ...)</li>
+          <li>Import of STIX data and better support for OpenIOC</li>
+          <li>Support Cyber Threat Intelligence structures such as Campaigns, Threat Actors, TTPs,...</li>
+          <li>Further integration with other tools: Import/Export from/to sandboxes, external feeds, ...</li>
+          <li>Enrichment by gathering additional information on the data you're entering.</li>
+          </ul>
+        </div>
+        </div>
+        </div>
+      </div>
+
       
       <a class="anchor" id="screenshots"></a>
       <div class="row">
@@ -272,13 +305,51 @@
                   <img src="img/screenshots/thumb/event-list.png" alt="">
               </a>
               </div>
-
-
-
               </div>
            </div>
+        </div>
+      </div>
+
+
+      <a class="anchor" id="support"></a>
+      <div class="row">
+        <div class="span12">
+        <div class="card">
+          <h3 class="card-heading simple">Contact the MISP Project</h3>
+          <div class="card-body">
+          <ul>
+            <li><b>Accelerate the development of new features by supporting the MISP project</b> fincancially, or by offering developper time or infrastructure resources.</a></li>
+            <li>You can contact us at: <a href="mailto:info@misp-project.org">info@misp-project.org</a></li>
+            <li>Also the MISP software project has a questionnaire to get a better view on the user baseand on possible support MISP could benefit to coordinate efforts and guarantee MISP governance on long term. We would appreciate it if you could fill it in.
+            <a class="btn btn-primary" href="https://docs.google.com/forms/d/1LLRaD6MQsCo5IoiJkRIL9ff6ofOOwUDYEtW9hOVaog4/viewform?usp=send_form" target="_blank">Give feedback now &raquo;</a></li>
+          </ul>
+          </div>
+          <h3 class="card-heading simple">Community Support</h3>
+          <div class="card-body">
+            <ul>
+            <li>Users forum: <a href="https://groups.google.com/forum/#!forum/misp-group">https://groups.google.com/forum/#!forum/misp-group</a></li>
+            <li>Documentation: <a href="https://github.com/MISP/MISP/tree/master/INSTALL">User &amp; Install guide</a></li>
+            <li>Source code: <a href="https://github.com/MISP/">https://github.com/MISP/</a></li>
+            <li>Issue tracking: <a href="https://github.com/MISP/MISP/issues">https://github.com/MISP/MISP/issues</a></li>
+            </ul>
+          </div>
+          <h3 class="card-heading simple">Commercial Support</h3>
+          <div class="card-body">
+            <!--h4>Sponsors</h4>
+            <p>The following companies are sponsoring the development of MISP financially or by contributing major features. They are however not representing the MISP Project or deciding unilaterally about the roadmap.</p>
+           
+            <h4>Other companies</h4-->
+            <p>The following companies do not have a specific affiliation with the MISP Project except the fact that they are providing commercial services around MISP. This can be integration services, software development, support,...</p>
+            <ul>
+            <li><a href="mailto:andras.iklody+misp-project@gmail.com">Iglocska</a>: Custom software development and integration</li>
+            <li></li>
+            </ul>
+            <p><i>Contact us if you would like to get your company added.</i></p>
+          </div>
 
         </div>
+        </div>
+      </div>
       </div>
 
 
