--- a/index.html
+++ b/index.html
@@ -226,8 +226,27 @@
           When new data is added MISP will immediately show <b>relations with other observables and indicators</b>. This results in more efficient analysis, but also allows you to have a better picture of the TTPs, related campaigns and attribution.</p>
           <p>The <b>discussion</b> feature will also enable conversations between multiple analysts resulting in <b>win-win</b> for everyone.</p>
         </div>
+        
+        <h3 class="card-heading simple">Today MISP is used by</h3>
+        <div class="card-body">
+        <ul>
+        <li>CERTs and Governments: 
+          <a target="_blank" href="http://www.ncirc.nato.int/">NATO</a>, 
+          <a target="_blank" href="http://www.mil.be">Belgian Defence</a>,
+          <a target="_blank" href="https://www.circl.lu">CIRCL</a>,
+          <a target="_blank" href="http://cert.europa.eu/">CERT-EU</a>,
+          <a target="_blank" href="https://www.ncsc.nl/">NCSC</a>, ...
+          </li>
+        <li>ISACs and Trust-groups</li>
+        <li>Private Companies:
+          <a target="_blank" href="https://www.circl.lu/services/misp-malware-information-sharing-platform/">CIRCL</a>, ...
+          </li>
         </div>
-      </div>
+        </div>
+        </div>
+
+
+      
       </div>
 
 
