--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
       <!-- Always force latest IE rendering engine (even in intranet) & Chrome Frame -->
       <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
       <meta name="viewport" content="width=device-width, initial-scale=1.0">
-      <meta name="description" content="">
+      <meta name="description" content="MISP - Malware Information Sharing Platform">
+      <meta name="keywords" content="MISP, CTI, malware, threat, cyber, intelligence, information exchange, sharing, open source">
       <meta name="author" content="">
 
       <!-- Le styles -->
