--- a/index.html
+++ b/index.html
@@ -56,6 +56,7 @@
                <span class="icon-bar"></span>
              </button>
              <div class="text-center logo">
+              <img class="" src="img/logo.png"/>&nbsp; 
               <span class="logoletter">M</span>alware 
               <span class="logoletter">I</span>nformation 
               <span class="logoletter">S</span>haring 
