--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
               <div class="card-body">
                 <img class="img-circle pull-right" src="img/euro.jpg">
                 <p>
-                MISP is <b>free and open source</b> (AGPL) under a <b>non-profit</b> model. However you can support it's development by <b>paid support, custom development or sponsorship</b>. Contributions to planned features are also welcome.
+                The MISP software is <b>free and open source</b> (AGPL) under a <b>non-profit</b> model. However you can support it's development by <b>paid support, custom development or sponsorship</b>. Contributions to planned features are also welcome.
                 </p>
               </div>
               <div class="card-actions">
