changed download link to github to make the other sub-projects more prominent

--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
                 <li><a href="#usecase">Use-cases</a></li>
                 <li><a href="#roadmap">Roadmap</a></li>
                 <li><a href="#screenshots">Screenshots</a></li>
-                <li><a target="_blank" href="http://github.com/MISP/MISP">Download</a></li>
+                <li><a target="_blank" href="http://github.com/MISP">Download</a></li>
                 <!--li><a href="#public">Public MISP</a></li-->
                 <li><a href="#support">Support</a></li>
               </ul>
@@ -164,7 +164,7 @@
                 </p>
               </div>
               <div class="card-actions">
-                <a class="btn btn-primary btn-block"  target="_blank" href="http://github.com/MISP/MISP">Download now &raquo;</a>
+                <a class="btn btn-primary btn-block"  target="_blank" href="http://github.com/MISP">Download now &raquo;</a>
                 <a class="btn btn-primary btn-block" href="#support">Get Support &raquo;</a>
               </div>
             </div>
