--- a/index.html
+++ b/index.html
@@ -260,19 +260,19 @@
         <div class="card-body">
           <p>The roadmap of the MISP software project was created in a collaborative effort using the feedback from various users and communities using MISP. It is possible to accelerate the development of new features by <a href="#support">supporting the MISP project</a>. However it is not possible to force new features unilaterally. Things that only benefit your own organisation are free to be developed independently of the official MISP Project.</p>
         </div>
-        <h3 class="card-heading simple">v2.4</h3>
+        <h4 class="card-heading simple">v2.4</h4>
         <div class="card-body">
           <ul>
           <li>Sharing groups or 'Releasable to' model</li>
           </ul>
         </div>
-        <h3 class="card-heading simple">v2.5</h3>
+        <h4 class="card-heading simple">v2.5</h4>
         <div class="card-body">
           <ul>
           <li>Modular import / export with plugins <small><i>(delayed from 2.4)</i></small></li>
           </ul>
         </div>
-        <h3 class="card-heading simple">v3.0+</h3>
+        <h4 class="card-heading simple">v3.0+</h4>
         <div class="card-body">
           <ul>
           <li>New data model allowing composite objects (ex: file described by hashes, filenames, ...)</li>
@@ -280,6 +280,37 @@
           <li>Support Cyber Threat Intelligence structures such as Campaigns, Threat Actors, TTPs,...</li>
           <li>Further integration with other tools: Import/Export from/to sandboxes, external feeds, ...</li>
           <li>Enrichment by gathering additional information on the data you're entering.</li>
+          </ul>
+        </div>
+        <h3 class="card-heading simple">Release notes</h3>
+        <h4 class="card-heading simple">v2.3</h3>
+        <div class="card-body">
+          <p>Version 2.3 brings important improvements in features, performance and usability:</p>
+          <ul>
+          <li>STIX export</li>
+          <li>Easier editing of large data sets, thanks to AJAX</li>
+          <li>Impressive performance improvements in load time (and memory usage)</li>
+          <li>Templating system: create templates for your organisation for easier data entry, and optionally share the templates with other organisations on your MISP instance</li>
+          <li>Free-text import tool: just paste a list of indicators and let MISP figure out what it is.</li>
+          <li>Attribute merge tool: update the list of all attributes of the same type by pasting a new list of values.</li>
+          <li>Diagnostic and configuration tool</li>
+          <li>Improved synchronisation</li>
+          <li>API improvements</li>
+          <li>New Filtering for events / users with bookmarks</li>
+          </ul>
+        </div>
+        <h4 class="card-heading simple">v2.2</h3>
+        <div class="card-body">
+          <ul>
+          <li>Brings some minor improvements and fixes</li>
+          </ul>
+        </div>
+        <h4 class="card-heading simple">v2.1</h3>
+        <div class="card-body">
+          <ul>
+          <li>A complete redesign of the UI.</li>
+          <li>Added a lot more import/exports formats</li>
+          <li>Serious code cleanup</li>
           </ul>
         </div>
         </div>
@@ -362,8 +393,8 @@
             <h4>Other companies</h4-->
             <p>The following companies do not have a specific affiliation with the MISP Project except the fact that they are providing commercial services around MISP. This can be integration services, software development, support,...</p>
             <ul>
-            <li><a href="mailto:andras.iklody+misp-project@gmail.com">Iglocska</a>: Custom software development and integration</li>
-            <li></li>
+            <li><a href="mailto:andras.iklody+misp-project@gmail.com">Iglocska</a>: Custom software development and integration. <small><i>(the main developer of MISP)</i></small></li>
+            <li><a href="http://signal11.eu" target="_blank">Signal 11</a>: Technical support. <small><i>(previous developer of MISP)</i></small></li>
             </ul>
             <p><i>Contact us if you would like to get your company added.</i></p>
           </div>
@@ -375,7 +406,7 @@
 
 
       <footer>
-        <p>&copy; </p>
+        <p>&copy; MISP</p>
       </footer>
 
       </div> <!-- /container -->
