added more companies

--- a/index.html
+++ b/index.html
@@ -393,8 +393,9 @@
             <h4>Other companies</h4-->
             <p>The following companies do not have a specific affiliation with the MISP Project except the fact that they are providing commercial services around MISP. This can be integration services, software development, support,...</p>
             <ul>
-            <li><a href="mailto:andras.iklody+misp-project@gmail.com">Iglocska</a>: Custom software development and integration. <small><i>(the main developer of MISP)</i></small></li>
-            <li><a href="http://signal11.eu" target="_blank">Signal 11</a>: Technical support. <small><i>(previous developer of MISP)</i></small></li>
+            <li><a href="mailto:andras.iklody+misp-project@gmail.com">Iglocska</a>, for custom software development and integration. <small><i>(the main developer of MISP)</i></small></li>
+            <li><a href="http://signal11.eu" target="_blank">Signal 11</a>, for technical support. <small><i>(previous developer of MISP)</i></small></li>
+            <li><a href="mailto:david@cthulhu-solutions.com">Cthulhu Solutions</a>, for integration services and support. <small><i>(active contributor of MISP)</i></small></li>
             </ul>
             <p><i>Contact us if you would like to get your company added.</i></p>
           </div>
