minor clarification for CERT names

--- a/index.html
+++ b/index.html
@@ -235,9 +235,9 @@
         <li>CERTs and Governments: 
           <a target="_blank" href="http://www.ncirc.nato.int/">NATO</a>, 
           <a target="_blank" href="http://www.mil.be">Belgian Defence</a>,
-          <a target="_blank" href="https://www.circl.lu">CIRCL</a>,
+          <a target="_blank" href="https://www.circl.lu">CIRCL.lu</a>,
           <a target="_blank" href="http://cert.europa.eu/">CERT-EU</a>,
-          <a target="_blank" href="https://www.ncsc.nl/">NCSC</a>, ...
+          <a target="_blank" href="https://www.ncsc.nl/">NCSC.nl</a>, ...
           </li>
         <li>ISACs and Trust-groups</li>
         <li>Private Companies:
