--- a/index.html
+++ b/index.html
@@ -379,7 +379,8 @@
           <h3 class="card-heading simple">Community Support</h3>
           <div class="card-body">
             <ul>
-            <li>Users forum: <a href="https://groups.google.com/forum/#!forum/misp-group">https://groups.google.com/forum/#!forum/misp-group</a></li>
+            <li>Users mailing list: <a href="https://groups.google.com/forum/#!forum/misp-users">https://groups.google.com/forum/#!forum/misp-users</a></li>
+            <li>Developers mailing list: <a href="https://groups.google.com/forum/#!forum/misp-devel">https://groups.google.com/forum/#!forum/misp-devel</a></li>
             <li>Documentation: <a href="https://github.com/MISP/MISP/tree/master/INSTALL">User &amp; Install guide</a></li>
             <li>Source code: <a href="https://github.com/MISP/">https://github.com/MISP/</a></li>
             <li>Issue tracking: <a href="https://github.com/MISP/MISP/issues">https://github.com/MISP/MISP/issues</a></li>
