--- a/index.html
+++ b/index.html
@@ -199,7 +199,7 @@
         <li><strong>import</strong>: bulk-import, batch-import, import from OpenIOC, GFI sandbox, ThreatConnect CSV, ...</li>
         <li><strong>data-sharing</strong>: automatically exchange and synchronization with other parties and trust-groups using MISP</li>
         <li><strong>STIX support</strong>: export data in the STIX format (XML and json)</li>
-        <li><strong>Automation</strong>: REST API, PyMISP, ZeroMQ</li>
+        <li><strong>automation</strong>: REST API, PyMISP, ZeroMQ</li>
         </ul>
         </div>
         </div>
