added some more companies

--- a/index.html
+++ b/index.html
@@ -397,7 +397,9 @@
             <ul>
             <li><a href="mailto:andras.iklody+misp-project@gmail.com">Iglocska</a>, for custom software development and integration. <small><i>(the main developer of MISP)</i></small></li>
             <li><a href="http://signal11.eu" target="_blank">Signal 11</a>, for technical support. <small><i>(previous developer of MISP)</i></small></li>
-            <li><a href="mailto:david@cthulhu-solutions.com">Cthulhu Solutions</a>, for integration services and support. <small><i>(active contributor of MISP)</i></small></li>
+            <li><a href="mailto:david@cthulhu-solutions.com" target="_blank">Cthulhu Solutions</a>, for integration services and support. <small><i>(active contributor of MISP)</i></small></li>
+            <li><a href="mailto:info@b2sp.be" target="_blank">B2SP</a>, for integration services, business processes and support.</li>
+            <li><a href="http://slcsecurity.com" target="_blank">SLC Security Services</a> LLC, using MISP as part of a larger program for corporations and government clients</li>
             </ul>
             <p><i>Contact us if you would like to get your company added.</i></p>
           </div>
