--- a/index.html
+++ b/index.html
@@ -380,9 +380,9 @@
           <h3 class="card-heading simple">Community Support</h3>
           <div class="card-body">
             <ul>
-            <li>Users mailing list: <a href="https://groups.google.com/forum/#!forum/misp-users">https://groups.google.com/forum/#!forum/misp-users</a></li>
-            <li>Developers mailing list: <a href="https://groups.google.com/forum/#!forum/misp-devel">https://groups.google.com/forum/#!forum/misp-devel</a></li>
-            <li>Documentation: <a href="https://github.com/MISP/MISP/tree/master/INSTALL">User &amp; Install guide</a></li>
+            <li>Users mailing list: <a href="https://groups.google.com/forum/#!forum/misp-users">misp-users</a></li>
+            <li>Developers mailing list: <a href="https://groups.google.com/forum/#!forum/misp-devel">misp-devel</a></li>
+            <li>Documentation: <a href="https://github.com/MISP/misp.github.io.git">The MISP book</a></li>
             <li>Source code: <a href="https://github.com/MISP/">https://github.com/MISP/</a></li>
             <li>Issue tracking: <a href="https://github.com/MISP/MISP/issues">https://github.com/MISP/MISP/issues</a></li>
             </ul>
