corrected incorrect url in previous commit

--- a/index.html
+++ b/index.html
@@ -382,7 +382,7 @@
             <ul>
             <li>Users mailing list: <a href="https://groups.google.com/forum/#!forum/misp-users">misp-users</a></li>
             <li>Developers mailing list: <a href="https://groups.google.com/forum/#!forum/misp-devel">misp-devel</a></li>
-            <li>Documentation: <a href="https://github.com/MISP/misp.github.io.git">The MISP book</a></li>
+            <li>Documentation: <a href="https://github.com/MISP/misp-book">The MISP book</a></li>
             <li>Source code: <a href="https://github.com/MISP/">https://github.com/MISP/</a></li>
             <li>Issue tracking: <a href="https://github.com/MISP/MISP/issues">https://github.com/MISP/MISP/issues</a></li>
             </ul>
